Bug 368072 - -Werror has no effect with Clazy
Summary: -Werror has no effect with Clazy
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-31 19:20 UTC by Csaba Kertész
Modified: 2016-09-03 11:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Kertész 2016-08-31 19:20:26 UTC
The compilation does not stop after a clazy warning is found despite -Werror is added to the compiler options.
Comment 1 Sergio Martins 2016-09-03 11:23:42 UTC
Git commit a61d424ee07a835dbcb05d035211e03c64e19830 by Sergio Martins.
Committed on 03/09/2016 at 11:22.
Pushed by smartins into branch 'master'.

Emit an error instead of warning if -Werror was supplied

M  +4    -2    checkbase.cpp
M  +5    -0    tests/clazy/config.json
A  +13   -0    tests/clazy/werror.cpp     [License: UNKNOWN]  *
A  +1    -0    tests/clazy/werror.cpp.expected
M  +2    -1    tests/run_tests.py

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/clazy/a61d424ee07a835dbcb05d035211e03c64e19830