Emit an error instead of warning if -Werror was supplied

BUG: 368072